--- a/index.html
+++ b/index.html
@@ -6,14 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link href="./css/cardstarter.css" rel="stylesheet">
-	<link rel="stylesheet" href="./css/style.css">
-	<script defer src="./js/app.js"></script>
+	<link href="css/cardstarter copy.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
+	<script defer src="js/app.js"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <!-- <link rel="manifest" href="/site.webmanifest"> -->
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
   <title> The Battle at HogWARts </title>
 </head>
 <body>
-  
+<h1> The Battle at HogWARts </h1>
 
+
+<div class="containerWizard1">
+  <div id="deckBF1" class="card small outline"></div>
+  <div id="deck-start1" class="card small back-blue shadow"></div>
+</div>
+<button id="btnW1" class="btn"> wandW1 </button>
+
+
+<div class="containerWizard2">
+  <div id="deckBF2" class="card small outline"></div>
+  <div id="deck-start2" class="card small back-blue shadow"></div>
+</div>
+<button id="btnW2" class="btn"> wandW2 </button>
 
 
 </body>
