--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
 
 <h3 id="message">  </h3>
 
+<button class="btn btn-secondary" id="tieBtn" type="tie" hidden> Book of Spells </button>
 </body>
 </html>
