--- a/index.html
+++ b/index.html
@@ -23,19 +23,23 @@
 <h1> The Battle at HogWARts </h1>
 
 
-<div class="containerWizard1">
+<div class="containerBattlefield">
   <div id="deckBF1" class="card small outline"></div>
-  <div id="deck-start1" class="card small back-blue shadow"></div>
-</div>
-<button id="btnW1" class="btn"> wandW1 </button>
-
-
-<div class="containerWizard2">
   <div id="deckBF2" class="card small outline"></div>
-  <div id="deck-start2" class="card small back-blue shadow"></div>
 </div>
-<button id="btnW2" class="btn"> wandW2 </button>
 
+
+
+<div class="containerWizards">
+  
+  <div id="deck-start1" class="card small back-blue shadow"></div>
+  <button id="btnW1" class="btn"> wandW1 </button>
+  <span></span>
+  <div id="deck-start2" class="card small back-blue shadow"></div>
+<button id="btnW2" class="btn"> wandW2 </button>
+</div>
+<p> </p>
+<p></p>
 <h3 id="message">  </h3>
 
 <button class="btn btn-secondary" id="tieBtn" type="tie" hidden> Book of Spells </button>
