--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div class="gameOver">
   
-    <button type="button"  class="btn btn-outline-dark" id='gameOverBtn'  > Play again? </button>
+    <button type="button" hidden class="btn btn-outline-dark" id='gameOverBtn' > Play again? </button>
   </div>
 </body>
 </html>
