--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
   <div class="containerBattlefield">
-    <div id="deckBF1" class="card small outline"></div>
+    <div id="deckBF1" class="card small "></div>
 
     <div id="deckBF2" class="card small outline"></div>
     
@@ -35,10 +35,10 @@
   <div class="containerWizards">
   
     <div id="deck-start1" class="card small back-blue shadow"></div>
-    <button id="btnW1" class="btn"> wandW1 </button>
+    <!-- <button id="btnW1" class="btn"> wandW1 </button> -->
     
     <div id="deck-start2" class="card small back-blue shadow"></div>
-    <button id="btnW2" class="btn"> wandW2 </button>
+    <!-- <button id="btnW2" class="btn"> wandW2 </button> -->
   </div>
   <p> </p>
   <p></p>
