card dom adjust

--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 	<link href="css/cardstarter copy.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<script defer src="js/app.js"></script>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <!-- <link rel="manifest" href="/site.webmanifest"> -->
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+  <link id="favicon" rel="icon" href="assets/favicon-32x32.png" type="image/png" sizes="32x32">
 
   <title> The Battle at HogWARts </title>
 </head>
@@ -23,16 +17,11 @@
   <h1> The Battle at HogWARts </h1>
 
 
-  <div class="containerBattlefield">
-    <div id="deckBF1" class="card small "></div>
+  <div class="battlefield">
+    <div id="deckBF1" class="card small outline"></div>
 
     <div id="deckBF2" class="card small outline"></div>
     
-  </div>
-
-
-
-  <div class="containerWizards">
   
     <div id="deck-start1" class="card small back-blue shadow"></div>
     <!-- <button id="btnW1" class="btn"> wandW1 </button> -->
