card back update

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
 
   <div class="battlefield">
-    <div id="deckBF1" class="card small back-red shadow"></div>
+    <div id="deckBF1" class="card small outline"></div>
     <div id="deck-extra" class="card small back-red shadow"></div>
-    <div id="deckBF2" class="card small back-red shadow"></div>
+    <div id="deckBF2" class="card small outline"></div>
     <div id="deck-extra" class="card small back-red shadow"></div>
   
-    <div id="deck-start1" class="card small back-blue shadow"></div>
+    <div id="deck-start1" class="card small card back shadow"></div>
     <!-- <button id="btnW1" class="btn"> wandW1 </button> -->
     
-    <div id="deck-start2" class="card small back-blue shadow"></div>
+    <div id="deck-start2" class="card small card back shadow"></div>
     <!-- <button id="btnW2" class="btn"> wandW2 </button> -->
   </div>
   <p> </p>
