game over button fix

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div id="deck-extra" class="card small back-red shadow"></div>
   
     <div id="deck-start1" class="card small card back shadow"></div>
-    <!-- <button id="btnW1" class="btn"> wandW1 </button> -->
+    <button id="btnW1" class="btn" type=""hidden> Collect spoil 1 </button>
     
     <div id="deck-start2" class="card small card back shadow"></div>
-    <!-- <button id="btnW2" class="btn"> wandW2 </button> -->
+    <button id="btnW2" class="btn" type="" hidden> Collect spoil 2 </button>
   </div>
   <p> </p>
   <p></p>
