card flow correct

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script defer src="js/app.js"></script>
   <link id="favicon" rel="icon" href="assets/favicon-32x32.png" type="image/png" sizes="32x32">
+  <style type="text/css">
+    body {cursor: url(http://www.rw-designer.com/cursor-extern.php?id=128535);}
+    </style>
+    <a href="http://www.rw-designer.com/cursor-set/wand"
+    title="Get free cursors for your web."></a>
 
   <title> The Battle at HogWARts </title>
 </head>
@@ -18,26 +23,20 @@
 
 
   <div class="battlefield">
+
     <div id="deckBF1" class="card small outline"></div>
-    <div id="deck-extra" class="card small back-red shadow"></div>
-    <div id="deckBF2" class="card small outline"></div>
-    <div id="deck-extra" class="card small back-red shadow"></div>
-  
+    <div id="deckBF2" class="card small outline"></div>  
     <div id="deck-start1" class="card small card back shadow"></div>
     <button id="btnW1" class="btn" type=""hidden> Collect spoil 1 </button>
-    
     <div id="deck-start2" class="card small card back shadow"></div>
     <button id="btnW2" class="btn" type="" hidden> Collect spoil 2 </button>
   </div>
-  <p> </p>
-  <p></p>
-  <h3 id="message">  </h3>
-
-  <button class="btn btn-secondary" id="tieBtn" type="tie" hidden> Book of Spells </button>
-
+    <!-- <button class="btn btn-secondary" id="tieBtn" type="tie" hidden> Book of Spells </button> -->
   <div class="gameOver">
-  
+
+    <h3 id="message">  </h3>
     <button type="button" hidden class="btn btn-outline-dark" id='gameOverBtn' > Play again? </button>
   </div>
+
 </body>
 </html>
