--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <style type="text/css">
     body {cursor: url(http://www.rw-designer.com/cursor-extern.php?id=128535);}
     </style>
-    <a href="http://www.rw-designer.com/cursor-set/wand"
+  <a href="http://www.rw-designer.com/cursor-set/wand"
     title="Get free cursors for your web."></a>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Oranienbaum&family=PT+Serif&display=swap" rel="stylesheet">
 
   <title> The Battle at HogWARts </title>
 </head>
