--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
       <div id="deck-start2" class="card small card back shadow"></div>
     </div>
     <div class="hidden-buttons">
-      <button id="btnW1" class="btn" type=""> Collect spoil 1 </button>
-      <button id="btnW2" class="btn" type="" > Collect spoil 2 </button>
+      <button id="btnW1" class="btn" type="button" hidden> Collect spoil 1 </button>
+      <button id="btnW2" class="btn" type="button" hidden> Collect spoil 2 </button>
     </div>
   </div>
-    <!-- <button class="btn btn-secondary" id="tieBtn" type="tie" hidden> Book of Spells </button> -->
   <div class="gameOver">
     <h3 id="message">  hello message </h3>
-    <button type="button" hidden class="btn btn-outline-dark" id='gameOverBtn' > Play again? </button>
+    <button type="button"  class="btn btn-outline-dark" id='gameOverBtn' > Play again? </button>
   </div>
 
 </body>
