--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link href="css/cardstarter copy.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<script defer src="js/app.js"></script>
   <link id="favicon" rel="icon" href="assets/favicon-32x32.png" type="image/png" sizes="32x32">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Oranienbaum&family=PT+Serif&display=swap" rel="stylesheet">
-
   <title> THE BATTLE AT HOGWARTS </title>
 </head>
 <body>
-  <h1> THE BATTLE AT HOGWARTS </h1>
+  <h1 id="title"> THE BATTLE AT HOGWARTS </h1>
+  <h3 id="message">  hello message </h3>
   <div class="battlefield">
     <div class="battle">
       <div id="deckBF1" class="card small outline"></div>
@@ -35,7 +34,6 @@
     </div>
   </div>
   <div class="gameOver">
-    <h3 id="message">  hello message </h3>
     <button type="button"  class="btn btn-outline-dark" id='gameOverBtn' > Play again? </button>
   </div>
 
