--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <div id="deck-start2" class="card small card back shadow"></div>
       </div>
       <div class="replay">
-        <button type="button" class="btn btn-outline-dark" id="gameOverBtn"> Play again? </button>
+        <h6> 
+          <img src="../assets/HP.png" alt="HP" style="width:110px">
+          <span></span>
+          <img src="../assets/Malfoy.jpeg" alt="Malfoy" style="width:70px">
+        </h6>
+        <button type="button" hidden class="btn btn-outline-dark" id="gameOverBtn"> Play again? </button>
       </div>
     </div>
   </board>
