--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
       </div>
       <div class="replay">
         <h6> 
-          <img src="../assets/HP.png" alt="HP" style="width:110px">
-          <span></span>
-          <img src="../assets/Malfoy.jpeg" alt="Malfoy" style="width:70px">
+          
         </h6>
+        <div class="HP"> 
+          <span id="HP"></span>
+          <span id="Malfoy"></span>
+          <img src="../assets/hp.png" alt="HP" style="width:110px">
+          <span></span>
+          <img src="../assets/malfoy.jpeg" alt="Malfoy" style="width:70px">
+        </div>
+        
         <button type="button" hidden class="btn btn-outline-dark" id="gameOverBtn"> Play again? </button>
       </div>
     </div>
