--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 </head>
 <body>
   <board class="board">
-    <h1 id="title"> THE BATTLE AT HOGWARTS </h1>
-    <h3 id="message">  hello message </h3>
+    <div id="msg-container"><h1 id="title"> THE BATTLE AT HOGWARTS </h1><h3 id="message">  hello message </h3></div>
     <div class="battlefield">
       <div class="battle">
         <div id="deckBF1" class="card small outline"></div>
