--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </div>
       <div class="replay">
         <h6> 
-          <img src="../assets/hp.png" alt="HP" style="width:110px">
-          <img src="../assets/malfoy.jpeg" alt="Malfoy" style="width:70px">
+          <img src="assets/hp.png" alt="HP" style="width:110px">
+          <img src="assets/malfoy.jpeg" alt="Malfoy" style="width:70px">
         </h6>
         <button type="button" hidden class="btn btn-outline-dark" id="gameOverBtn"> Play again? </button>
       </div>
